# HireSight

backend-api/: config.py  main.py  nlp_utils.py  pyproject.toml  tts_util.py
backend-api/routes/: audio_routes.py  cv_routes.py  home.py  session_routes.py
